Fixed issue with long truncating content within html element.

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -2,7 +2,7 @@
 //! @file               main.less
 //! @author             Geoffrey Hunter <gbmhunter@gmail.com> (www.mbedded.ninja)
 //! @created            2015-11-02
-//! @last-modified      2015-11-08
+//! @last-modified      2015-11-14
 //! @brief              Contains the CSS styling for the NinjaCalc app.
 //! @details
 //!     See README.rst in repo root dir for more info.
@@ -10,7 +10,9 @@
 
 html, body {
     width: 100%;
-    height: 100%;
+    // Set min-height, not height, as height = 100% on
+    // html element truncates long content!
+    min-height: 100%;
     margin: 0;
     padding: 0;
 }
